# ml-production-demo

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  build_and_push.sh  deploy-helm.sh  pyproject.toml  run_inference_docker.sh  start_api.sh  test_gke_inference.sh
.github/: branch-protection.json
.github/workflows/: README.md  cd-inference.yml  cd-trainer.yml  ci-inference.yml  ci-trainer.yml  ci.yml  deploy-inference.yml  train-deploy-gcs.yml
docker/: Dockerfile.base-gpu  Dockerfile.gpu  Dockerfile.inference  Dockerfile.trainer  cloudbuild-trainer.yaml  cloudbuild.base-gpu.yaml  cloudbuild.gpu.yaml  cloudbuild.yaml
docs/: cicd_mlflow_strategy.md  gcs_model_storage.md  helm.md  mlflow_remote_setup.md  model_storage_strategies.md  pytorch_model.md
eda/: churn_model.pt  pytorch_trainer.py
helm/: Chart.yaml  README.md  values.yaml
helm/churn-inference/: README.md  values-dev.yaml  values-prod.yaml  values.yaml
helm/churn-inference/templates/: serviceaccount.yaml
helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
inference/: README.md  config.yaml  main.py  schemas.py  utils.py
inference/fastapi-inference/: .dockerignore  .env.example  DOCKER.md  gcs_loader.py  requirements.txt  run_docker.sh  test_api.py
inference/model/: model.json
k8s/: deployment.yaml  service.yaml  serviceaccount.yaml  setup-workload-identity.sh
pipeline/: deploy_pytorch_gpu.py
scripts/: upload_model_to_gcs.py
terraform/: README.md  github-actions.tf  gke.tf  iam.tf  main.tf  outputs.tf  storage.tf  variables.tf
terraform/modules/github-actions/: README.md  main.tf  outputs.tf  variables.tf
tests/: test_inference_api.py
trainer/: __init__.py  config.yaml  data_loader.py  main.py  validation.py
trainer/mlruns/954011377355680173/: meta.yaml
trainer/mlruns/954011377355680173/14f1e776db34455b9bfe8a64fda19242/: meta.yaml
trainer/mlruns/954011377355680173/1ce1db819eec45e9ae863dd8e2b3fbbf/: meta.yaml
trainer/mlruns/954011377355680173/2583ca8e43074b2080696173d2e8e725/: meta.yaml
trainer/mlruns/954011377355680173/28f39d89fc2144e399b3d5ccce18a7fa/: meta.yaml
trainer/mlruns/954011377355680173/4b93dd404b6240ab82b2d6975f4d7e39/: meta.yaml
trainer/mlruns/954011377355680173/50bf2075a9c94ff484005f7e647b6aaf/: meta.yaml
trainer/mlruns/954011377355680173/61b90b52fc384341af20fcadba89b7a5/: meta.yaml
trainer/mlruns/954011377355680173/72a18bc147cd45c08d5989588b919aec/: meta.yaml
trainer/mlruns/954011377355680173/8da41d5ce8444ee5acb7b061b29d148c/: meta.yaml
trainer/mlruns/954011377355680173/940ba09181504e5ebc82a4e1f54372d3/: meta.yaml
trainer/mlruns/954011377355680173/b8a1d2a594024bfab08b0e1347d86325/: meta.yaml
trainer/mlruns/954011377355680173/bafcbcd0b4e6431aa02f8065ffc0addb/: meta.yaml
trainer/mlruns/954011377355680173/c2f4c9d6963740aeb18ad20c9c5fd8ad/: meta.yaml
trainer/mlruns/954011377355680173/c4cabdfb44634c77831c59a52cee15b0/: meta.yaml
trainer/mlruns/954011377355680173/effda025540945f39831c9a17801e578/: meta.yaml
trainer/mlruns/954011377355680173/f6b4ee05ef9649359b8bd597e921a517/: meta.yaml
trainer/mlruns/954011377355680173/ff5cdff858a842f99a5cb2262cf794a2/: meta.yaml
(+53 files in other folders)
