[project]
name = "churn-demo"
version = "0.1.0"
description = "Predict Churn"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "google-cloud-bigquery",
  "pandas",
  "numpy<2",
  "xgboost",
  "optuna",
  "scikit-learn",
  "pyyaml",
  "pydantic>=2.0",
  "db-dtypes",
  "kfp",
  "google-cloud-aiplatform",
  "torch>=2.2,<2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pre-commit",
  "joblib"
]

[tool.setuptools.packages.find]
where = ["trainer"]

[tool.black]
line-length = 100
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.terraform
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = [".venv/*", "__pycache__/*", ".terraform/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
