[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-demo"
version = "0.1.0"
description = "Inference Demo"
requires-python = ">=3.10"
dependencies = [
  "pyyaml",
  "pydantic>=2.0",
  "google-cloud-storage",
  "google-cloud-bigquery",
  "pandas",
  "numpy<2",
  "xgboost",
  "db-dtypes",
]

[project.optional-dependencies]
# Inference/API dependencies
inference = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
]

# Development dependencies
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-anyio",
  "joblib",
  "requests>=2.31.0",
  "httpx",
  "pre-commit>=4.3.0",
]


[tool.black]
line-length = 100
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.terraform
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = [".venv/*", "__pycache__/*", ".terraform/*"]

[tool.setuptools.packages.find]
where = ["."]
